# stm32f412g_player

./: Makefile  README.md  STM32F412ZGTx_FLASH.ld  path.mk  settings.mk
Inc/: audio.h  display_playlist.h  fatfs_storage.h  ffconf.h  ffconf_.h  main.h  sd_diskio.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Src/: audio.c  audio_.c  display_pl_list.c  display_playlist.c  fatfs_storage.c  main.c  sd_diskio.c  stm32f4xx_it.c
Src/audio/: audio.c  audio.h  id3.c  id3.h  mp3.c
Src/audio/mp3/: mad.h
Src/display/: display.h  display_error.c  display_pl_list.c  display_playlist.c  display_song.c
Src/joystick/: joystick.h
Src/main/: main.c  player.c  player.h  stm32f4xx_it.c
Src/mp3/: config.h  frame.c  timer.c
Src/pl_list/: pl_list.c  pl_list.h
Src/playlist/: light_playlist.c  light_playlist.h  playlist.c  playlist.h  playlist_common.c  playlist_structures.h  playlist_view.c  playlist_view.h
Src/sd_card/: sd_card_operation.c  sd_card_operation.h
Src/touch/: moving.c  moving.h  touchscreen.c  touchscreen.h
Src/usb/: usb_command_process.c  usb_command_process.h  usb_commands.h  usb_device.c  usb_send.c  usbd_cdc_if.c  usbd_cdc_if.h  usbd_conf.h
Src/util/: util.h
Src/view/: view.c  view.h
src/FAKE/: _hal_i2s.c
src/audio/: audio.c  audio.cpp  audio.h  id3.c  id3.cpp  id3.h  mp3.cpp  mp3.h
src/audio/mp3/: decoder.c  decoder.h  frame.c  frame.h  layer3.c  mad.h  stream.c  stream.h
src/display/: display.h  display_common.cpp  display_common.h  display_error.c  display_error.cpp  display_error.h  display_offsets.h  display_picture.cpp  display_picture.h  display_picture_huffman.cpp  display_picture_lz4.cpp  display_picture_offset.cpp  display_pl_list.c  display_pl_list.cpp  display_playlist.c  display_playlist.cpp  display_playlists.h  display_song.c  display_song.cpp  display_song.h
src/joystick/: joystick.c  joystick.cpp  joystick.h
src/main/: char_sizes.h  init.cpp  init.h  main.c  main.cpp  main.h  player.cpp  stm32f4xx_hal_conf.h  stm32f4xx_it.c  stm32f4xx_it.cpp  stm32f4xx_it.h
src/pictures/: display_picture.cpp  display_picture_lz4.cpp  huffman_pic.h
src/pl_list/: pl_list.c  pl_list.cpp  pl_list.h
src/playlist/: find_song.cpp  find_song.h  light_playlist.cpp  light_playlist.h  play.h  playlist.cpp  playlist.h  playlist_common.cpp  playlist_common.h  playlist_structures.h  playlist_view.c  playlist_view.cpp  playlist_view.h
src/sd_card/: sd_card_operation.c  sd_card_operation.cpp  sd_card_operation.h
src/touch/: moving.c  moving.cpp  moving.h  touchscreen.c  touchscreen.cpp  touchscreen.h
src/usb/: usb_command_process.c  usb_command_process.cpp  usb_command_process.h  usb_commands.cpp  usb_commands.h  usb_device.c  usb_device.h  usb_send.cpp  usb_send.h  usbd_cdc_if.c  usbd_cdc_if.cpp  usbd_cdc_if.h  usbd_conf.c  usbd_conf.h  usbd_desc.c
src/util/: direction_t.h  util.cpp  util.h
src/view/: process_view.c  process_view.cpp  view.c  view.cpp  view.h  view_states.h
utilities/characters/: calc_utf8_len.cpp  calc_utf8_len.h  char_conversion.cpp  char_conversion.h  convert_custom.cpp  convert_custom.h  fill_char_set.cpp  fill_char_set.h  utf8_automat.cpp  utf8_automat.h
utilities/command_sender/: CMakeLists.txt  check_string.cpp  check_string.h  commnad_sender.cpp  headers.cpp  interactive_command.h  interactive_fd.cpp  send_by_name.cpp  send_by_name.h
utilities/command_sender/src/: commnad_sender.cpp  test.cpp
utilities/command_sender/src/command_line/: check_string.cpp  check_string.h  send_by_name.cpp  send_by_name.h  string_command.h
utilities/command_sender/src/interactive/: char_reconvert.cpp  char_reconvert.h  colors.cpp  colors.h  common_types.h  display.cpp  display.h  interactive.h  interactive_command.h  interactive_fd.cpp  term_colors.cpp  term_colors.h  term_display.cpp  term_display.h
utilities/command_sender_tcp/: CMakeLists.txt  command_sender_tcp
utilities/command_sender_tcp/src/: send_password.cpp
utilities/convert_font/: CMakeLists.txt
utilities/convert_font/src/: convert_font.cpp
utilities/convert_font/src/psf/: psf.cpp  psf.h  psf_1.cpp  psf_1.h  psf_2.cpp  psf_2.h  psf_common.cpp  psf_common.h
utilities/convert_playlist/: CMakeLists.txt  convert_playlist.cpp  tdlib
utilities/convert_playlist/src/: char_conversion.cpp  char_conversion.h  convert_playlist.cpp  path_conversion.cpp  path_conversion.h
utilities/huffman_encode/: CMakeLists.txt  huffman_encode.cpp  lz4_encode.cpp  offset_calculator.cpp
utilities/multiplex_server/: CMakeLists.txt
utilities/multiplex_server/for_systemd/: player_stm32_multiplex_server.service  player_stm32_multiplex_server.socket
utilities/multiplex_server/src/: authentificator.h  check_password.cpp  check_password.h  client_wrapper.cpp  client_wrapper.h  com_wrapper.cpp  com_wrapper.h  epoll_reg.cpp  epoll_reg.h  epoll_wrapper.cpp  epoll_wrapper.h  helper_functions.h  pass_checker.h  server.cpp  tcp_server_sock.cpp  tcp_server_sock.h  unix_server_sock.cpp  unix_server_sock.h
utilities/packet_len_data/: recver_data.cpp  recver_data.h  sender_data.cpp  sender_data.h
utilities/read_write/: read_write.h
utilities/ring_buffer/: ring_buffer.cpp  ring_buffer.h
utilities/sockets/: simple_socket.h  web_socket.cpp  web_socket.h
